    [KNOX-1040] - Separated the provider config selection modal into its own component.
    [KNOX-1040] - Added visual indicator that a provider config has not been removed because it is referenced, and improved editable fields
    [KNOX-1040] - Initial changes to support simple descriptors and provider configurations in the Admin UI.

** Improvement
    [KNOX-1381] - Fix logging
    [KNOX-1378] - Declare SSO params using KnoxSSO service option  knoxsso.expected.params
    [KNOX-1379] - Default dispatch whitelist should not include localhost when the Knox host domain can be determined
    [KNOX-1363] - Support service role-based whitelist for dispatches and redirects
    [KNOX-1357] - Add configurable list of AutoDeploy topologies to deploy on server start
    [KNOX-1350] - Complete centralization of manager.xml topology config in gateway-site.xml
    [KNOX-1339] - (KIP-11 Federation)  Add support for header preauth dispatch
    [KNOX-1350] - Centralize Group Lookup Config in gateway-site.xml
    [KNOX-1338] - Add Config Property for Knox Admin Groups for AclsAuthz Provider Use
    [KNOX-1326] - merge DATANODE rewrite rules into HDFSUI
    [KNOX-1336] - Upgrade libpam4j to abstractj/1.9.1
    [KNOX-1315] - Spark UI urls issue: Jobs, stdout/stderr and threadDump links (Guang Yang via lmccay)
    [KNOX-1143] - Add MR job history ws rest api rewrite rule to jobhistoryui (Guang Yang via lmccay)
    [KNOX-1089] - Upgrade Jetty
    [KNOX-1329] - Upgrade the transitive springframework spring core to even newer version
    [KNOX-1290] - Create gateway definition for Log Search - version 0.5.0 (Olivér Szabó via lmccay)
    [KNOX-1329] - Upgrade the transitive springframework spring core from pac4j
    [KNOX-1328] - Change Default Authentication to KnoxSSO for Admin UI
    [KNOX-1320] - Upgrade JQuery in the KnoxAuth Application
    [KNOX-1327] - Log REST invocation error exceptions encountered during service discovery at ERROR level